--- a/annotation/pom.xml
+++ b/annotation/pom.xml
@@ -9,11 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>autoware</artifactId>
+    <artifactId>annotation</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>autoware-byName</module>
-        <module>autoware-byType</module>
+        <module>required</module>
     </modules>
+
 
 </project>
