--- a/autoware/autoware-byType/pom.xml
+++ b/autoware/autoware-byType/pom.xml
@@ -3,17 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring</artifactId>
+        <artifactId>autoware</artifactId>
         <groupId>com.beclever</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>autoware</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>autoware-byName</module>
-        <module>autoware-byType</module>
-    </modules>
+    <artifactId>autoware-byType</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+    </dependencies>
 </project>
